# measurenary

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: conf.py  distance.rst  requirements.txt  similarity.rst  usage.rst
docs/source/: agglomerative_best.rst  conf.py  index.rst  pair_best.rst  usage.rst
measurenary/: LICENSE  __init__.py  agglomerative_best.py  distance.py  pair_best.py  pyproject.toml  similarity.py  utility.py
test/: agglomerative_test.py  distance_test.py  pair_test.py  similarity_test.py  utility_test.py
