[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.30",
]
build-backend = "setuptools.build_meta"

[project]
name = "measurenary"
version = 1.0.0
authors = [
    {name = "Muhammad Dwiki Ramdhani", email = "mdramdha@gmail.com"},
    {name = "Sony Hartono Wijaya", email = "shwjy@gmail.com"},
]
description = "A package to calculate and find the best similarity between binary data features"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
install_requires=[
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "scikit_learn",
    "setuptools>=42",
    "tqdm"
]